2001-07-10 John R. Jackson <jrj@purdue.edu>

	* server-src/Makefile.am: Backport development branch chg-scsi code
	  to 2.4.2.
	* changer-src/chg-scsi.c: Ditto.
	* changer-src/libscsi.h: Ditto.
	* changer-src/scsi-aix.c: Ditto.
	* changer-src/scsi-bsd.c: Ditto.
	* changer-src/scsi-cam.c: Ditto.
	* changer-src/scsi-changer-driver.c: Ditto.
	* changer-src/scsi-defs.h: Ditto.
	* changer-src/scsi-hpux.c: Ditto.
	* changer-src/scsi-hpux_new.c: Ditto.
	* changer-src/scsi-irix.c: Ditto.
	* changer-src/scsi-linux.c: Ditto.
	* changer-src/scsi-solaris.c: Ditto.
	* changer-src/sense.c: Ditto.

2001-07-10 John R. Jackson <jrj@purdue.edu>

	* server-src/amcheck.c: Move user name check before attempt to create
	  temp files so more appropriate error message is generated.

2001-07-09 John R. Jackson <jrj@purdue.edu>

	* common-src/dgram.c: Fix error end case unitialized variable.

2001-07-05 John R. Jackson <jrj@purdue.edu>

	* docs/TAPE.CHANGERS: Minor docs/TAPE.CHANGERS update to clarify
	  that -slot and -eject unload and put the current tape away.

2001-07-02 John R. Jackson <jrj@purdue.edu>

	* changer-src/chg-manual.sh.in: Add yet another ONLINEREGEX, this one
	  compliments of Nick (n_hibma@qubesoft.com) for some FreeBSD variant.

2001-06-27 John R. Jackson <jrj@purdue.edu>

	* changer-src/chg-manual.sh.in: Add "bs=32k" to the dd command so
	  some kernels would not complain about the tape block being larger
	  than the buffer.
	* changer-src/chg-mtx.sh.in: Ditto.

2001-06-21 John R. Jackson <jrj@purdue.edu>

	* server-src/planner.c: If the compression rate is very small (such
	  as zero after some types of errors) and FORCE_FULL is set, a path
	  is taken that (among other bad things) generates a schedule that
	  driver cannot read (syntax errors).
	* server-src/conffile.c: Do not allow negative comprate values.

2001-06-19 John R. Jackson <jrj@purdue.edu>

	* server-src/holding.c: Use fullread() instead of read() to read the
	  holding disk file.
